<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.LoginActivity" >

    <ImageView
        android:layout_width="155dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:src="@drawable/ic_welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <include
            android:id="@+id/login_account"
            android:layout_marginTop="4dp"
            layout="@layout/view_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="2dp"
            android:background="@color/light_divider" />

        <include
              android:id="@+id/login_password"
            android:layout_marginTop="4dp"
            layout="@layout/view_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/light_divider" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/launch_btn_login_bg"
            android:text="@string/login"
            android:textColor="@color/launch_btn_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/login_tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/forget_password" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/register_new" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>