<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/feedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_more_normal"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="12dp"
        android:background="#DCE0DD" />

    <LinearLayout
        android:id="@+id/ll_about_zhiwen"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/about_zhiwen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_more_normal"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="12dp"
        android:background="#DCE0DD" />

    <LinearLayout
        android:id="@+id/ll_connect_us"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/about_us" />

        <TextView
            android:id="@+id/tv_articles"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_more_normal"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="12dp"
        android:background="#DCE0DD" />

</LinearLayout>