<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <org.iflab.wc.image.SmartImageView
                android:id="@+id/iv_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:src="@drawable/ic_avatar_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:singleLine="true"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvSignature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="3dp"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:singleLine="true"
                        android:textColor="#bfbfbf" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="4dp"
                    android:background="#a987888D" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lv_topics"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/userinfo_item_style"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_topic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/default_number" />

                        <TextView
                            android:id="@+id/tv_topic_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/i_follow_topics"
                            android:textColor="#D3D3D3"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0.3dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="#a987888D" />

                    <LinearLayout
                        android:id="@+id/lv_ifocus_person"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/userinfo_item_style"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_ifocus_person"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/default_number" />

                        <TextView
                            android:id="@+id/tv_ifocus_person_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/i_follow_people"
                            android:textColor="#D3D3D3"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0.3dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="#a987888D" />

                    <LinearLayout
                        android:id="@+id/lv_focusi_person"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/userinfo_item_style"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_focusi_person"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/default_number" />

                        <TextView
                            android:id="@+id/tv_focusi_person_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/follow_i_people"
                            android:textColor="#D3D3D3"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#a987888D" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_thanks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_thank"
                    android:drawablePadding="5dp"
                    android:text="@string/default_number"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:drawableLeft="@drawable/ic_vote_normal"
                    android:drawablePadding="5dp"
                    android:text="@string/default_number"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:drawableLeft="@drawable/ic_collect"
                    android:drawablePadding="5dp"
                    android:text="@string/default_number"
                    android:textSize="16sp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp" >

                <Button
                    android:id="@+id/bt_focus"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_green_normal"
                    android:text="@string/follow_number"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <ProgressBar
                    android:id="@+id/pb_change_follow"
                    style="@android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#DCE0DD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/lv_replys"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/userinfo_item_style"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/replay" />

                <TextView
                    android:id="@+id/tv_replys"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/ic_more_normal"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#DCE0DD" />

            <LinearLayout
                android:id="@+id/lv_asks"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/userinfo_item_style"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/asking" />

                <TextView
                    android:id="@+id/tv_asks"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/ic_more_normal"
                    android:gravity="center_vertical"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#DCE0DD" />

            <LinearLayout
                android:id="@+id/lv_articles"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/userinfo_item_style"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/article" />

                <TextView
                    android:id="@+id/tv_articles"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/ic_more_normal"
                    android:gravity="center_vertical"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#DCE0DD" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#DCE0DD" />

        <LinearLayout
            android:id="@+id/ll_logout"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="@drawable/userinfo_item_style"
            android:clickable="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="#ff9966" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#DCE0DD" />
    </LinearLayout>

</ScrollView>